# GameEngine

./: CMakeLists.txt  readme.md
Engine/: CMakeLists.txt
Engine/Core/: Application.cpp  Application.hpp  Logger.cpp  Logger.hpp  Timer.cpp  Timer.hpp
Engine/Platform/: IWindow.hpp
Engine/Platform/SDL/: SDLWindow.cpp  SDLWindow.hpp
Engine/Renderer/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  RTSCameraController.cpp  RTSCameraController.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
Sandbox/: CMakeLists.txt  main.cpp
assets/: triangle.frag  triangle.vert
